layout update on buttons + home page + timer

--- a/app/src/main/res/layout/activity_add_task_page.xml
+++ b/app/src/main/res/layout/activity_add_task_page.xml
@@ -25,14 +25,13 @@
             android:layout_width="200dp"
             android:layout_height="55dp"
             android:layout_marginStart="104dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="70dp"
             android:background="@drawable/btn_circle"
-            android:backgroundTint="#CC6B49"
             android:drawableEnd="@drawable/ic_addbutton"
             android:fontFamily="@font/roboto"
             android:padding="15dp"
             android:text="Create"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,13 +44,14 @@
             android:layout_marginStart="44dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="44dp"
+            android:autofillHints="Start Time"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:drawableEnd="@drawable/ic_time"
             android:ems="10"
             android:focusable="false"
             android:fontFamily="@font/roboto"
             android:hint="Start Time"
-            android:autofillHints="Start Time"
             android:inputType="datetime"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,13 +65,14 @@
             android:layout_marginStart="44dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="44dp"
+            android:autofillHints="Deadline"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:drawableEnd="@drawable/ic_deadline"
             android:ems="10"
             android:focusable="false"
             android:fontFamily="@font/roboto"
             android:hint="Deadline"
-            android:autofillHints="Deadline"
             android:inputType="datetime"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +88,7 @@
             android:layout_marginEnd="44dp"
             android:autofillHints="Title"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:hint="Title"
@@ -106,6 +108,7 @@
             android:layout_marginEnd="44dp"
             android:autofillHints="Description"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:hint="Description"
