--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="144dp"
         android:fontFamily="@font/oswald"
-        android:text="Notification"
+        android:text="NOTIFICATION"
         android:textColor="#6f5642"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -119,7 +119,6 @@
         android:layout_marginEnd="105dp"
         android:layout_marginBottom="154dp"
         android:background="@drawable/btn_circle"
-        android:backgroundTint="#CC6B49"
         android:drawableEnd="@drawable/ic_addbutton"
         android:fontFamily="@font/roboto"
         android:padding="15dp"
