--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -44,7 +44,6 @@
             android:layout_marginTop="44dp"
             android:layout_marginEnd="104dp"
             android:background="@drawable/btn_circle"
-            android:backgroundTint="#CC6B49"
             android:drawableEnd="@drawable/ic_addbutton"
             android:fontFamily="@font/roboto"
             android:padding="15dp"
@@ -65,6 +64,7 @@
             android:layout_marginEnd="44dp"
             android:autofillHints="Start Time"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:drawableEnd="@drawable/ic_time"
             android:ems="10"
             android:focusable="false"
@@ -87,6 +87,7 @@
             android:layout_marginEnd="44dp"
             android:autofillHints="Deadline"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:drawableEnd="@drawable/ic_deadline"
             android:ems="10"
             android:focusable="false"
@@ -109,6 +110,7 @@
             android:layout_marginEnd="44dp"
             android:autofillHints="Title"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:hint="Title"
@@ -131,6 +133,7 @@
             android:layout_marginEnd="44dp"
             android:autofillHints="Description"
             android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
             android:ems="10"
             android:fontFamily="@font/roboto"
             android:hint="Description"
