--- a/app/src/main/res/layout/calendar_event_edit.xml
+++ b/app/src/main/res/layout/calendar_event_edit.xml
@@ -25,18 +25,30 @@
         android:textSize="34sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/textView37"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="30dp"
+        android:text="Event Name:"
+        android:textColor="#6f5642"
+        android:textSize="20sp"
+        android:textStyle="normal" />
+
     <EditText
         android:id="@+id/eventNameET"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
+        android:autofillHints="Name of Event"
         android:background="@drawable/custom_input"
+        android:backgroundTint="#e9e0d4"
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Name of Event"
-        android:autofillHints="Name of Event"
         android:inputType="text"
         android:paddingStart="10dp"
         android:textAlignment="viewStart"
@@ -62,6 +74,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/custom_input"
+        android:backgroundTint="#e9e0d4"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:textAlignment="viewStart"
@@ -86,12 +99,13 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
+        android:autofillHints="Select Time"
         android:background="@drawable/custom_input"
+        android:backgroundTint="#e9e0d4"
         android:focusable="auto"
         android:focusableInTouchMode="false"
         android:fontFamily="@font/roboto"
         android:hint="Select Time"
-        android:autofillHints="Select Time"
         android:padding="10dp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
@@ -106,7 +120,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/btn_bg"
+        android:background="@drawable/btn_circle"
         android:drawableEnd="@drawable/ic_addbutton"
         android:drawablePadding="5dp"
         android:fontFamily="@font/roboto"
