--- a/app/src/main/res/layout/quote_dialog_layout.xml
+++ b/app/src/main/res/layout/quote_dialog_layout.xml
@@ -49,7 +49,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/btn_circle"
+                android:backgroundTint="#e9e0d4"
                 android:text="Ok"
+                android:textColor="#6f5642"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.446"
