--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -22,7 +22,7 @@
             android:fontFamily="@font/roboto"
             android:padding="5dp"
             android:text="EDIT TASK"
-            android:textColor="#cc6b49"
+            android:textColor="#6f5642"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/taskTimer"
